--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
     background-color: #2c3e50;
 }
 
+.light_blue_bg {
+    background-color: #3a546d;
+}
+
 .green_bg {
     background-color: #1abc9c;
 }
